# project2

./: .gitignore  README_FINAL.md  README_MODE_DETECTION.md  README_WEBSOCKET.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  lcd_tjpgd_example_main.c  pretty_effect.c  test_main.c  websocket_client.c  websocket_client.h  websocket_lcd_main.c  wifi_connection.c  wifi_connection.h
